# pico_mipi_dbi

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.txt  TODO.md  fmt_src.sh  main.c  out.cl.c
cmake/: FindFreeType.cmake
docs/: MGL.md  index.md
examples/: CMakeLists.txt
include/: asio.h  bbuff.h  bitmap.h  ll.h  mgl.h  mipi.h  mipi_dbi_spi.h  mipi_dcs.h  mipi_gfx.h  mipi_init.h  osal.h
include/freetype/config/: ftoption.h
src/: CMakeLists.txt  ll.c  mgl.c  mgl_draw_gfx.c  mipi_dbi.c  mipi_i80_parallel_ctr.c  mipi_spi_connector.c  mipi_spi_ctr.c  mipi_tx_fmbf.c  pico_runtime_osal.c  runtime.c
src/mgl/: CMakeLists.txt  mgl.c  mgl.h  mgl_draw_gfx.c
